--- a/5-module/3-task/index.html
+++ b/5-module/3-task/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<title>Бангкок Экспресс: Карусель</title>
+<html lang="en">
 
-<link rel="stylesheet" href="/assets/styles/common.css" />
-<link rel="stylesheet" href="./index.css" />
+<head>
+  <meta charset="UTF-8">
+  <title>Бангкок Экспресс: Карусель</title>
+
+  <link rel="stylesheet" href="/assets/styles/common.css" />
+  <link rel="stylesheet" href="./index.css" />
 </head>
 
 <body>
