--- a/7-module/2-task/index.html
+++ b/7-module/2-task/index.html
@@ -17,11 +17,12 @@
 
     window.openModal = () => {
       let modal = new Modal();
-      modal.setTitle('Modal Title');
+      modal.setTitle('Title');
       modal.setBody(createElement('<div>Тело модального окна</div>'));
 
       modal.open();
     }
+
   </script>
 
   <div class="container">
